# Chess-201

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  LICENSE  Makefile  README.md  board.cpp  cmake_install.cmake  main  main.cpp  vcpkg.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
include/: board.hpp  builder.hpp  catapult.hpp  dragon.hpp  game.hpp  general.hpp  jester.hpp  miner.hpp  piece.h  piece.hpp  sentinel.hpp  variables.h  zombie.hpp
main.dSYM/Contents/Resources/DWARF/: main
pieces/: piece.cpp
source/: lib.cpp
src/: CMakeLists.txt  board.cpp  builder.cpp  catapult.cpp  dragon.cpp  game.cpp  general.cpp  jester.cpp  main.cpp  miner.cpp  piece.cpp  sentinel.cpp  zombie.cpp
test/: CMakeLists.txt
test/source/: Chess_test.cpp
testing/4/black/answers/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  24.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
testing/4/black/tests/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
testing/4/white/answers/: 0.txt  1.txt  10.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  4.txt  5.txt  6.txt  7.txt  8.txt
testing/4/white/tests/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  (+9 more)
(+287 files in other folders)
