# Parent project does not export its library target, so this CML implicitly
# depends on being added from it, i.e. the testing is done only from the build
# tree and is not feasible from an install location

project(ChessTests LANGUAGES CXX)

# ---- Dependencies ----

find_package(Catch2 REQUIRED)
include(Catch)

# ---- Tests ----

add_executable(Chess_test source/Chess_test.cpp)
target_link_libraries(
    Chess_test PRIVATE
    Chess_lib
    Catch2::Catch2WithMain
)
target_compile_features(Chess_test PRIVATE cxx_std_17)

catch_discover_tests(Chess_test)

# ---- End-of-file commands ----

add_folders(Test)
